Elaboración de archivo con obsevaciones para cambios

--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Web.config
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Web.config
@@ -14,11 +14,12 @@
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <globalization enableClientBasedCulture="false" culture="es-MX" uiCulture="es-MX" />
-  <pages>
+    <pages>
       <namespaces>
         <add namespace="GridMvc" />
       </namespaces>
-    </pages></system.web>
+    </pages>
+  </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -51,18 +52,19 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  
   <connectionStrings>
     <remove name="BD_CtasPorCobrarConnection" />
     <remove name="BD_MigracionTPConnection" />
     <remove name="BD_RepositorioConnection" />
     <remove name="BD_TemporalPagoConnection" />
-
-    <add name="BD_CtasPorCobrarConnection" connectionString="data source=.\SQL_2016E;initial catalog=BD_OCEF_CtasPorCobrar;user id=UserOCEF;password=123@abc;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
+    <add name="BD_CtasPorCobrarConnection" connectionString="data source=.\BDT;initial catalog=BD_OCEF_CtasPorCobrar;user id=sa;password=Admin123;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
+    <add name="BD_MigracionTPConnection" connectionString="data source=.\BDT;initial catalog=BD_OCEF_MigracionTP;user id=sa;password=Admin123;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
+    <add name="BD_RepositorioConnection" connectionString="data source=.\BDT;initial catalog=BD_UNFV_Repositorio;user id=sa;password=Admin123;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
+    <add name="BD_TemporalPagoConnection" connectionString="data source=.\BDT;initial catalog=BD_OCEF_TemporalPagos;user id=sa;password=Admin123;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
+    <!--<add name="BD_CtasPorCobrarConnection" connectionString="data source=.\SQL_2016E;initial catalog=BD_OCEF_CtasPorCobrar;user id=UserOCEF;password=123@abc;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
     <add name="BD_MigracionTPConnection" connectionString="data source=.\SQL_2016E;initial catalog=BD_OCEF_MigracionTP;user id=UserOCEF;password=123@abc;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
     <add name="BD_RepositorioConnection" connectionString="data source=.\SQL_2016E;initial catalog=BD_UNFV_Repositorio;user id=UserOCEF;password=123@abc;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
-    <add name="BD_TemporalPagoConnection" connectionString="data source=.\SQL_2016E;initial catalog=BD_OCEF_TemporalPagos;user id=UserOCEF;password=123@abc;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
-        
+    <add name="BD_TemporalPagoConnection" connectionString="data source=.\SQL_2016E;initial catalog=BD_OCEF_TemporalPagos;user id=UserOCEF;password=123@abc;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <system.codedom>
     <compilers>
@@ -70,5 +72,4 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  
 </configuration>
