--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar.csproj
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar.csproj
@@ -446,6 +446,7 @@
     <Content Include="Assets\font-awesome\fonts\FontAwesome.otf" />
     <Content Include="Assets\jquery\jquery-3.3.1.min.map" />
     <Content Include="Assets\toastr\js\toastr.js.map" />
+    <Content Include="TextFile1.txt" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
