--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar.csproj
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar.csproj
@@ -217,6 +217,7 @@
     <Compile Include="Models\Services\TemporalPagos\AlumnoService.cs" />
     <Compile Include="Models\Services\TemporalPagos\ObligacionService.cs" />
     <Compile Include="Models\Services\UnfvRepositorio\AlumnoService.cs" />
+    <Compile Include="Models\ViewModels\DetalleMigracionCuotaPago.cs" />
     <Compile Include="Models\ViewModels\LoginViewModel.cs" />
     <Compile Include="Models\ViewModels\ObligacionAlumnoViewModel.cs" />
     <Compile Include="Models\ViewModels\ResponseViewModel.cs" />
@@ -543,6 +544,8 @@
     <Content Include="Views\Obligaciones\_DetalleObligacion.cshtml" />
     <Content Include="Views\Obligaciones\_EditarObligacion.cshtml" />
     <Content Include="Views\CuotaPago\_CtasPorCobrarProcesos.cshtml" />
+    <Content Include="Views\ConceptoPago\_CtasPorCobrarConceptos.cshtml" />
+    <Content Include="Views\CuotaPago\_VerDetalleMigracion.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
