vistas repositorio UNFV

--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Web.config
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Web.config
@@ -49,6 +49,7 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -57,14 +58,14 @@
     <remove name="BD_MigracionTPConnection" />
     <remove name="BD_RepositorioConnection" />
     <remove name="BD_TemporalPagoConnection" />
-    <add name="BD_CtasPorCobrarConnection" connectionString="data source=.\BDT;initial catalog=BD_OCEF_CtasPorCobrar;user id=sa;password=Admin123;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
+    <!--<add name="BD_CtasPorCobrarConnection" connectionString="data source=.\BDT;initial catalog=BD_OCEF_CtasPorCobrar;user id=sa;password=Admin123;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
     <add name="BD_MigracionTPConnection" connectionString="data source=.\BDT;initial catalog=BD_OCEF_MigracionTP;user id=sa;password=Admin123;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
     <add name="BD_RepositorioConnection" connectionString="data source=.\BDT;initial catalog=BD_UNFV_Repositorio;user id=sa;password=Admin123;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
-    <add name="BD_TemporalPagoConnection" connectionString="data source=.\BDT;initial catalog=BD_OCEF_TemporalPagos;user id=sa;password=Admin123;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
-    <!--<add name="BD_CtasPorCobrarConnection" connectionString="data source=.\SQL_2016E;initial catalog=BD_OCEF_CtasPorCobrar;user id=UserOCEF;password=123@abc;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
+    <add name="BD_TemporalPagoConnection" connectionString="data source=.\BDT;initial catalog=BD_OCEF_TemporalPagos;user id=sa;password=Admin123;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />-->
+    <add name="BD_CtasPorCobrarConnection" connectionString="data source=.\SQL_2016E;initial catalog=BD_OCEF_CtasPorCobrar;user id=UserOCEF;password=123@abc;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
     <add name="BD_MigracionTPConnection" connectionString="data source=.\SQL_2016E;initial catalog=BD_OCEF_MigracionTP;user id=UserOCEF;password=123@abc;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
     <add name="BD_RepositorioConnection" connectionString="data source=.\SQL_2016E;initial catalog=BD_UNFV_Repositorio;user id=UserOCEF;password=123@abc;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
-    <add name="BD_TemporalPagoConnection" connectionString="data source=.\SQL_2016E;initial catalog=BD_OCEF_TemporalPagos;user id=UserOCEF;password=123@abc;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />-->
+    <add name="BD_TemporalPagoConnection" connectionString="data source=.\SQL_2016E;initial catalog=BD_OCEF_TemporalPagos;user id=UserOCEF;password=123@abc;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.codedom>
     <compilers>
