--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar.csproj
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar.csproj
@@ -222,7 +222,9 @@
     <Compile Include="Models\Services\TemporalPagos\AlumnoService.cs" />
     <Compile Include="Models\Services\TemporalPagos\ObligacionService.cs" />
     <Compile Include="Models\Services\UnfvRepositorio\AlumnoService.cs" />
+    <Compile Include="Models\ViewModels\CuotaPagoViewModel.cs" />
     <Compile Include="Models\ViewModels\DetalleMigracionCuotaPago.cs" />
+    <Compile Include="Models\ViewModels\EstudianteViewModel.cs" />
     <Compile Include="Models\ViewModels\LoginViewModel.cs" />
     <Compile Include="Models\ViewModels\ObligacionAlumnoViewModel.cs" />
     <Compile Include="Models\ViewModels\ResponseViewModel.cs" />
@@ -550,7 +552,7 @@
     <Content Include="Views\Obligaciones\_EditarObligacion.cshtml" />
     <Content Include="Views\CuotaPago\_CtasPorCobrarProcesos.cshtml" />
     <Content Include="Views\ConceptoPago\_CtasPorCobrarConceptos.cshtml" />
-    <Content Include="Views\CuotaPago\_VerDetalleMigracion.cshtml" />
+    <Content Include="Views\CuotaPago\_DatosCuotaPago.cshtml" />
     <Content Include="Views\Obligaciones\_CtasPorCobrarObligaciones.cshtml" />
     <Content Include="Views\DetalleObligacion\_EditarDetalleObligacion.cshtml" />
     <Content Include="Views\Obligaciones\_ValidarRegistrosObligacion.cshtml" />
