--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar.csproj
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar.csproj
@@ -183,15 +183,18 @@
     <Compile Include="Models\Repository\CtasPorCobrar\ConceptoRepository.cs" />
     <Compile Include="Models\Repository\CtasPorCobrar\ConceptoPagoRepository.cs" />
     <Compile Include="Models\Repository\CtasPorCobrar\ProcesoRepositoty.cs" />
-    <Compile Include="Models\Repository\Migracion\AlumnoRepository.cs" />
-    <Compile Include="Models\Repository\Migracion\TasasConceptoPagoRepository.cs" />
-    <Compile Include="Models\Repository\Migracion\ConceptoPagoRepository.cs" />
+    <Compile Include="Models\Repository\Migracion\Cross\AlumnoRepository.cs" />
+    <Compile Include="Models\Repository\Migracion\Cross\ConceptoPagoRepository.cs" />
+    <Compile Include="Models\Repository\Migracion\Cross\CuotaPagoRepository.cs" />
+    <Compile Include="Models\Repository\Migracion\Cross\ObligacionRepository.cs" />
+    <Compile Include="Models\Repository\Migracion\Obligaciones\ConceptoPagoRepository.cs" />
+    <Compile Include="Models\Repository\Migracion\Obligaciones\ObligacionRepository.cs" />
+    <Compile Include="Models\Repository\Migracion\Tasas\ConceptoPagoRepository.cs" />
     <Compile Include="Models\Repository\Migracion\Configuracion.cs" />
-    <Compile Include="Models\Repository\Migracion\TasasCuotaPagoRepository.cs" />
-    <Compile Include="Models\Repository\Migracion\CuotaPagoRepository.cs" />
-    <Compile Include="Models\Repository\Migracion\DetalleObligacionRepository.cs" />
-    <Compile Include="Models\Repository\Migracion\ObligacionRepository.cs" />
-    <Compile Include="Models\Repository\Migracion\ObservacionRepository.cs" />
+    <Compile Include="Models\Repository\Migracion\Obligaciones\CuotaPagoRepository.cs" />
+    <Compile Include="Models\Repository\Migracion\Cross\DetalleObligacionRepository.cs" />
+    <Compile Include="Models\Repository\Migracion\Cross\ObservacionRepository.cs" />
+    <Compile Include="Models\Repository\Migracion\Tasas\ObligacionRepository.cs" />
     <Compile Include="Models\Repository\TemporalPagos\AlumnoRepository.cs" />
     <Compile Include="Models\Repository\TemporalPagos\ConceptoPagoRepository.cs" />
     <Compile Include="Models\Repository\TemporalPagos\Configuracion.cs" />
@@ -209,19 +212,24 @@
     <Compile Include="Models\Helpers\Constant.cs" />
     <Compile Include="Models\Helpers\Procedencia.cs" />
     <Compile Include="Models\Helpers\Response.cs" />
+    <Compile Include="Models\Repository\Migracion\Tasas\CuotaPagoRepository.cs" />
     <Compile Include="Models\Repository\UnfvRepositorio\AlumnoRepository.cs" />
     <Compile Include="Models\Repository\UnfvRepositorio\PersonaRepository.cs" />
     <Compile Include="Models\Services\CtasPorCobrar\ConceptoPagoServices.cs" />
     <Compile Include="Models\Services\CtasPorCobrar\ObligacionServices.cs" />
     <Compile Include="Models\Services\CtasPorCobrar\ProcesoServices.cs" />
     <Compile Include="Models\Services\CtasPorCobrar\EquivalenciasServices.cs" />
-    <Compile Include="Models\Services\Migracion\AlumnoService.cs" />
-    <Compile Include="Models\Services\Migracion\ConceptoPagoService.cs" />
-    <Compile Include="Models\Services\Migracion\CuotaPagoService.cs" />
-    <Compile Include="Models\Services\Migracion\ObligacionDetalleService.cs" />
+    <Compile Include="Models\Services\Migracion\Cross\AlumnoService.cs" />
+    <Compile Include="Models\Services\Migracion\Cross\ConceptoPagoService.cs" />
+    <Compile Include="Models\Services\Migracion\Cross\CuotaPagoService.cs" />
+    <Compile Include="Models\Services\Migracion\Cross\ObligacionDetalleService.cs" />
     <Compile Include="Models\Services\Migracion\DetalleObservacionService.cs" />
-    <Compile Include="Models\Services\Migracion\ObligacionService.cs" />
-    <Compile Include="Models\Services\Migracion\ObservacionService.cs" />
+    <Compile Include="Models\Services\Migracion\Obligaciones\ConceptoPagoService.cs" />
+    <Compile Include="Models\Services\Migracion\Obligaciones\CuotaPagoService.cs" />
+    <Compile Include="Models\Services\Migracion\Tasas\ConceptoPagoService.cs" />
+    <Compile Include="Models\Services\Migracion\Tasas\CuotaPagoService.cs" />
+    <Compile Include="Models\Services\Migracion\Cross\ObligacionService.cs" />
+    <Compile Include="Models\Services\Migracion\Cross\ObservacionService.cs" />
     <Compile Include="Models\Services\TemporalPagos\ConceptoPagoService.cs" />
     <Compile Include="Models\Services\TemporalPagos\CuotaPagoService.cs" />
     <Compile Include="Models\Services\TemporalPagos\AlumnoService.cs" />
@@ -485,7 +493,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\CajaPeriferica\" />
-    <Folder Include="Views\Tasas\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Files\Help\ManualUsuario.pdf" />
