actualizaciones migracion pagos

--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar.csproj
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar.csproj
@@ -578,6 +578,7 @@
     <Content Include="Views\ConceptoPago\_DatosMigracionTasas.cshtml" />
     <Content Include="Views\Tasas\Index.cshtml" />
     <Content Include="Views\CuotaPago\_DatosMigracionTasas.cshtml" />
+    <Content Include="Views\Reportes\Tasas.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
