--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar.csproj
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar.csproj
@@ -567,7 +567,7 @@
     <Content Include="Views\CuotaPago\_DatosCuotaPagoCompara.cshtml" />
     <Content Include="Views\Obligaciones\_CtasPorCobrarObligaciones.cshtml" />
     <Content Include="Views\DetalleObligacion\_EditarDetalleObligacion.cshtml" />
-    <Content Include="Views\Obligaciones\_ValidarRegistrosObligacion.cshtml" />
+    <Content Include="Views\Obligaciones\_SeleccionPeriodoFase.cshtml" />
     <Content Include="Views\Obligaciones\_MigrarRegistrosObligacion.cshtml" />
     <Content Include="Views\Shared\_ResultadoMigrarRegistrosModal.cshtml" />
     <Content Include="Views\Shared\_ResultadoListMigrarRegistrosModal.cshtml" />
