revision migracion de alumno

--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar.csproj
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar.csproj
@@ -584,6 +584,7 @@
     <Content Include="Views\CuotaPago\_DatosMigracionTasas.cshtml" />
     <Content Include="Views\Reportes\Tasas.cshtml" />
     <Content Include="Views\Shared\_ResultadoMigrarRegistrosObligacion.cshtml" />
+    <Content Include="Views\Shared\_ResultadoValidacion.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
